--- a/styles/home.css
+++ b/styles/home.css
@@ -35,6 +35,7 @@
     border: 1px solid rgb(13, 19, 33);
     border-radius: 8px;
     opacity: 0.8;
+    cursor: pointer;
 }
 
 .btn-hero {
@@ -46,6 +47,26 @@
     font-weight: 600;
     text-align: center;
     padding: 21px 24px;
+    cursor: pointer;
+}
+
+.btn-secondary {
+    background-color: white;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 1px solid rgb(13, 19, 33);
+    opacity: 0.7;
+
+    color: rgb(13, 19, 33);
+    font-family: "Azeret Mono", monospace;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 23px;
+    letter-spacing: 0%;
+    text-align: center;
+    cursor: pointer;
+
+
 }
 
 nav {
@@ -71,7 +92,7 @@ nav>h2 {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    position: absolute;
+    /* position: absolute; */
 
 }
 
@@ -97,4 +118,88 @@ nav>h2 {
     font-size: 16px;
     font-weight: 400;
     text-align: center;
+    opacity: 0.7;
+
+}
+
+
+/* main-style */
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+/* -------------Why Web Development??--------- */
+.whywebdev {
+    /* background-color: aquamarine; */
+    margin-top: 74px;
+    padding: 120px;
+}
+
+.section-title {
+    color: rgb(13, 19, 33);
+    font-size: 32px;
+    font-weight: 800;
+    text-align: center;
+    padding-bottom: 25px;
+}
+
+.section-description {
+    color: rgb(13, 19, 33);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    text-align: center;
+    opacity: 0.7;
+    padding-bottom: 50px;
+}
+
+.layer1,
+.layer3 {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 130px;
+}
+
+.layer2 {
+    display: flex;
+    gap: 35px;
+    margin-bottom: 130px;
+}
+
+
+.text {
+    width: 480px;
+    height: 240px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.text-title {
+    color: rgba(13, 19, 33, 0.7);
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 36px;
+    text-align: left;
+}
+
+.text-description {
+    color: rgb(13, 19, 33);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    text-align: left;
+}
+
+/* --------------inspiration----------- */
+
+.inspiration {
+    background-color: aqua
+}
+
+.inspiration .text-container {
+    background-color: chartreuse;
+    margin: 0 144px;
 }
