--- a/styles/home.css
+++ b/styles/home.css
@@ -88,7 +88,7 @@ nav>h2 {
     height: 870px; */
     width: 100%;
     height: 770px;
-    background-image: url("/assets/Hero-bg.png");
+    background-image: url("../assets/Hero-bg.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
