--- a/styles/home.css
+++ b/styles/home.css
@@ -154,17 +154,23 @@ main {
     padding-bottom: 50px;
 }
 
-.layer1,
-.layer3 {
+.layer1 {
     display: flex;
     justify-content: space-between;
     margin-bottom: 130px;
+    margin-top: 30px;
 }
 
 .layer2 {
     display: flex;
     gap: 35px;
     margin-bottom: 130px;
+}
+
+.layer3 {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 100px;
 }
 
 
@@ -196,10 +202,29 @@ main {
 /* --------------inspiration----------- */
 
 .inspiration {
-    background-color: aqua
+    background-color: aquamarine;
+    display: flex;
+    flex-direction: column;
 }
 
 .inspiration .text-container {
-    background-color: chartreuse;
     margin: 0 144px;
+}
+
+.video-card {
+    width: 1140px;
+    height: 614px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.2);
+    border-radius: 16px;
+
+}
+
+.video-item {
+    width: 1076px;
+    height: 550px;
+    border-radius: 15px;
 }
