--- a/styles/home.css
+++ b/styles/home.css
@@ -69,6 +69,20 @@
 
 }
 
+.btn-support {
+    background-color: white;
+    font-family: "Azeret Mono", monospace;
+    font-size: 20px;
+    font-weight: 600;
+    color: rgb(13, 19, 33);
+    padding: 17px 20px;
+    box-sizing: border-box;
+    /* border: 1px solid rgb(13, 19, 33); */
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+}
+
 nav {
     display: flex;
     align-items: center;
@@ -300,12 +314,10 @@ main {
 /* next target skill------------------------ */
 
 .nextskill {
-    background-color: rgba(128, 255, 0, 0.329);
     margin-top: 111px;
 }
 
 .skill-container {
-    background-color: aquamarine;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -366,4 +378,86 @@ main {
     font-weight: 700;
     text-align: left;
     text-decoration-line: underline;
+}
+
+/* ----------------support ---section----------- */
+
+.support {
+    background-image: url("../assets/handshake.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    margin-top: 50px;
+    padding: 64px 48px;
+    border-radius: 16px;
+    background-color: rgba(0, 0, 0, 0.4);
+    background-blend-mode: overlay;
+    
+}
+
+.support-container {
+    height: 186px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+
+.support form{
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+}
+
+.support-title {
+    color: rgb(255, 255, 255);
+    font-family: Azeret Mono;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 36px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+
+.support-description {
+    color: rgb(255, 255, 255);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: center;
+    opacity: 0.7;
+
+}
+
+.support form {
+    display: flex;
+}
+
+.feedback-input {
+    width: 528px;
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.15);
+    border-radius: 8px;
+    background: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 19px 20px;
+
+    /* text  */
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+}
+
+
+/* footer -------------------- */
+
+footer{
+    margin-top: 80px;
 }
