--- a/styles/home.css
+++ b/styles/home.css
@@ -392,7 +392,7 @@ main {
     border-radius: 16px;
     background-color: rgba(0, 0, 0, 0.4);
     background-blend-mode: overlay;
-    
+
 }
 
 .support-container {
@@ -404,7 +404,7 @@ main {
 
 }
 
-.support form{
+.support form {
     display: flex;
     justify-content: center;
     gap: 16px;
@@ -458,6 +458,24 @@ main {
 
 /* footer -------------------- */
 
-footer{
+footer {
+
+    background: rgba(13, 19, 33, 0.04);
     margin-top: 80px;
+}
+
+.footer-container {
+    max-width: 1140px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 32px 150px;
+}
+
+
+.foot-text {
+    color: rgb(13, 19, 33);
+    font-size: 20px;
+    font-weight: 600;
 }
