--- a/styles/home.css
+++ b/styles/home.css
@@ -38,6 +38,12 @@
     cursor: pointer;
 }
 
+.btn-primary:hover,
+.btn-secondary:hover,
+.btn-support:hover {
+    background-color: rgb(220, 225, 236);
+}
+
 .btn-hero {
     border-radius: 8px;
     background: rgb(13, 19, 33);
@@ -48,6 +54,14 @@
     text-align: center;
     padding: 21px 24px;
     cursor: pointer;
+    
+    text-decoration: none;
+    border: 1px solid black;
+}
+
+.btn-hero:hover {
+    background-color: rgb(220, 225, 236);
+    color: rgb(0, 0, 0);
 }
 
 .btn-secondary {
@@ -65,9 +79,9 @@
     letter-spacing: 0%;
     text-align: center;
     cursor: pointer;
-
-
+    text-decoration: none;
 }
+
 
 .btn-support {
     background-color: white;
@@ -82,6 +96,7 @@
     border: none;
     cursor: pointer;
 }
+
 
 nav {
     display: flex;
@@ -287,7 +302,6 @@ main {
 
 .target-card>h4 {
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
     font-size: 24px;
     font-weight: 800;
     text-align: left;
@@ -295,7 +309,6 @@ main {
 
 .target-card>p {
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
@@ -304,7 +317,6 @@ main {
 
 .target-card>a {
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
     font-size: 16px;
     font-weight: 700;
     text-align: left;
@@ -356,7 +368,6 @@ main {
 
 .skill-text>h4 {
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
     font-size: 24px;
     font-weight: 800;
     text-align: left;
@@ -364,7 +375,6 @@ main {
 
 .skill-text>p {
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
@@ -373,7 +383,6 @@ main {
 
 .skill-text>a {
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
     font-size: 16px;
     font-weight: 700;
     text-align: left;
@@ -412,7 +421,6 @@ main {
 
 .support-title {
     color: rgb(255, 255, 255);
-    font-family: Azeret Mono;
     font-size: 32px;
     font-weight: 700;
     line-height: 36px;
@@ -422,7 +430,6 @@ main {
 
 .support-description {
     color: rgb(255, 255, 255);
-    font-family: Azeret Mono;
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
@@ -478,4 +485,9 @@ footer {
     color: rgb(13, 19, 33);
     font-size: 20px;
     font-weight: 600;
+}
+
+.social-icon {
+    display: flex;
+    gap: 24px;
 }
